--- a/src/main/resources/templates/updateform.html
+++ b/src/main/resources/templates/updateform.html
@@ -32,7 +32,7 @@
             </div>
             <div class="form-group">
                 <label for="categories">Choose an option</label>
-                <select th:field="${product.category}" class="form-control" id="categories">
+                <select th:field="${productRequest.categoryId}" class="form-control" id="categories">
                     <option  th:value="${category.categoryId}"
                              th:each="category:${categories}"><span th:text="${category.name}"></span></option>
                 </select>
